force-app/main/default/objects/Transaction__c/fields/CHASSIS__c.field-meta.xml
<CustomField>
    <fullName>CHASSIS__c</fullName>
    <externalId>true</externalId>
    <label>CHASSIS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>