force-app/main/default/objects/Transaction__c/fields/Is_Error__c.field-meta.xml
<CustomField>
    <fullName>Is_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator of showing if the record is failed to process ?</description>
    <label>Is Error ?</label>
    <type>Checkbox</type>
</CustomField>