force-app/main/default/objects/Transaction__c/fields/Migrated_Data__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migrated Data</label>
    <type>Checkbox</type>
</CustomField>