force-app/main/default/objects/Transaction__c/fields/POSTING_DATE__c.field-meta.xml
<CustomField>
    <fullName>POSTING_DATE__c</fullName>
    <label>POSTING DATE</label>
    <type>Date</type>
</CustomField>