force-app/main/default/objects/Transaction__c/fields/TARMAGIC__c.field-meta.xml
<CustomField>
    <fullName>TARMAGIC__c</fullName>
    <externalId>true</externalId>
    <label>TARMAGIC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>