force-app/main/default/objects/Transaction__c/fields/VEHMAGIC__c.field-meta.xml
<CustomField>
    <fullName>VEHMAGIC__c</fullName>
    <externalId>true</externalId>
    <label>VEHMAGIC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>