force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SRC__c</columns>
    <columns>CHASSIS__c</columns>
    <columns>NRIC__c</columns>
    <columns>TARMAGIC__c</columns>
    <columns>VEHMAGIC__c</columns>
    <columns>Registered_Vehicle__c</columns>
    <columns>Contact__c</columns>
    <columns>Brand__c</columns>
    <columns>Amount__c</columns>
    <columns>EXPIRY__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>COST__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>