force-app/main/default/objects/Transaction__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Reward__c</columns>
    <columns>SRC__c</columns>
    <columns>CHASSIS__c</columns>
    <columns>NRIC__c</columns>
    <columns>TARMAGIC__c</columns>
    <columns>VEHMAGIC__c</columns>
    <columns>Registered_Vehicle__c</columns>
    <columns>Contact__c</columns>
    <columns>Brand__c</columns>
    <columns>Amount__c</columns>
    <columns>EXPIRY__c</columns>
    <columns>Is_Error__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>